[tool.poetry]
name = "lang-family"
version = "0.1.0"
description = ""
authors = ["Vimal Menon <69777626+vimalsmenon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.26"
langchain-deepseek = "^0.1.3"
python-dotenv = "^1.1.1"
langchain-openai = "^0.3.28"
langgraph = "^0.5.3"
langchain-mcp-adapters = "^0.1.9"
langchain-google-community = "^2.0.7"
langchain-community = "^0.3.27"
langchain-experimental = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
